--- a/Application/src/main/res/values/strings.xml
+++ b/Application/src/main/res/values/strings.xml
@@ -18,4 +18,17 @@
     <string name="description_info">Info</string>
     <string name="request_permission">This sample needs camera permission.</string>
     <string name="camera_error">This device doesn\'t support Camera2 API.</string>
+    <string name="beep">Beep</string>
+    <string name="kill">KILL</string>
+    <string name="on_off">ON/OFF</string>
+    <string name="spy_cam">Spy Cam</string>
+
+    <string-array name="sports_array">
+        <item>10 sec</item>
+        <item>1 min</item>
+        <item>10 min</item>
+        <item>30 min</item>
+        <item>1 h</item>
+        <item>1 s</item>
+    </string-array>
 </resources>
